--- a/html/article.html
+++ b/html/article.html
@@ -4,13 +4,14 @@
         <title>Trophées - Accueil</title>
         <meta charset="UTF-8">
         <link href="../css/style.css" rel="stylesheet">
-        <link href="../css/index.css" rel="stylesheet">
+        <link href="../css/article.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="../js/script.js"></script>
     </head>
     <body>
         <nav>
+            <img src="../images/default.png" alt="" id="btnCompte">
             <div id="mySidenav" class="sidenav">
                 <a id="closeBtn" href="#" class="close" onclick="closeNav()"><b id="closeBtnX">×</b></a>
                 <ul>
@@ -29,6 +30,72 @@
                 </div>
             </a>
         </nav>
+
+        <div class="container">
+            <div>
+                <div id="titre">
+                    <h1>Titre de l'article</h1> 
+                    <h2>Resolu</h2>
+                </div>
+                <div class="commentaire">
+                    <div class="largeBox">
+                        <div class="entete">
+                            <div class="identite">
+                                <img src="../images/default2.png" alt="" class="pdp">
+                                <h1>Pseudonyme</h1>
+                            </div>
+                        </div>
+                        <div class="sousLargebox">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <div class="footerCom">
+                            <p>N</p>
+                            <img src="../images/Design_sans_titre_1_-removebg-preview.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="commentaire">
+                    <div class="largeBox">
+                        <div class="entete">
+                            <div class="identite">
+                                <img src="../images/default2.png" alt="" class="pdp">
+                                <h1>Pseudonyme</h1>
+                            </div>
+                        </div>
+                        <div class="sousLargebox">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <div class="footerCom">
+                            <p>N</p>
+                            <img src="../images/Design_sans_titre_1_-removebg-preview.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="commentaire">
+                    <div class="largeBox">
+                        <div class="entete">
+                            <div class="identite">
+                                <img src="../images/default2.png" alt="" class="pdp">
+                                <h1>Pseudonyme</h1>
+                            </div>
+                        </div>
+                        <div class="sousLargebox">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                        <div class="footerCom">
+                            <p>N</p>
+                            <img src="../images/Design_sans_titre_1_-removebg-preview.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <footer>
         </footer>
     </body>
