--- a/html/article.html
+++ b/html/article.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/article.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="">
+        <link rel="icon" type="image/png" href="../images/Design_sans_titre-removebg-preview.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="../js/script.js"></script>
     </head>
@@ -18,6 +18,7 @@
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="jeux.html">Jeux</a></li>
                     <li><a href="compte.html">Compte</a></li>
+                    <li><a href="formulaireArticle.html">Article</a></li>
                 </ul>
             </div>
             <a href="#" id="openBtn" onclick="openNav()" class="navbar">
