--- a/html/compte.html
+++ b/html/compte.html
@@ -4,19 +4,21 @@
         <title>Trophées - Accueil</title>
         <meta charset="UTF-8">
         <link href="../css/style.css" rel="stylesheet">
-        <link href="../css/index.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="">
+        <link href="../css/compte.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="../images/Design_sans_titre-removebg-preview.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="../js/script.js"></script>
     </head>
     <body>
         <nav>
+            <img src="../images/default.png" alt="" id="btnCompte">
             <div id="mySidenav" class="sidenav">
                 <a id="closeBtn" href="#" class="close" onclick="closeNav()"><b id="closeBtnX">×</b></a>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="jeux.html">Jeux</a></li>
                     <li><a href="compte.html">Compte</a></li>
+                    <li><a href="formulaireArticle.html">Article</a></li>
                 </ul>
             </div>
             <a href="#" id="openBtn" onclick="openNav()" class="navbar">
@@ -29,6 +31,42 @@
                 </div>
             </a>
         </nav>
+        <div class="container">
+            <div class="largeBox">
+                <div id="imgpseudo">
+                    <img src="../images/default.png" alt="">
+                    <div>
+                        <h1>Pseudo PSN</h1>
+                        <h1>Pseudo Site</h1>
+                    </div>
+                </div>
+                <div>
+                    <p>N points</p>
+                    <p>Date d'inscription</p>
+                </div>
+            </div>
+            <div class="smallBox">
+                <div class="entete">
+                    <h1>Notification 1</h1>
+                    <a><b id="closeBtnX">×</b></a>
+                </div>
+                <p>Contenue de la Notification</p>
+            </div>
+            <div class="smallBox">
+                <div class="entete">
+                    <h1>Notification 1</h1>
+                    <a><b id="closeBtnX">×</b></a>
+                </div>
+                <p>Contenue de la Notification</p>
+            </div>
+            <div class="smallBox">
+                <div class="entete">
+                    <h1>Notification 1</h1>
+                    <a><b id="closeBtnX">×</b></a>
+                </div>
+                <p>Contenue de la Notification</p>
+            </div>
+        </div>
         <footer>
         </footer>
     </body>
