--- a/html/formulaireArticle.html
+++ b/html/formulaireArticle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr-fr">
     <head>
-        <title>Trophées - Accueil</title>
+        <title>Trophées - Article</title>
         <meta charset="UTF-8">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/formulaire.css" rel="stylesheet">
@@ -35,25 +35,16 @@
             <form action="">
                 <div class="form">
                     <div class="inform">
-                        <label for="trophy">Trophe</label>
-                        <input type="text" name="trophy">
+                        <label for="titre">Titre</label>
+                        <input type="text" name="titre">
                     </div>
                     <div class="inform">
-                        <label for="description">Description</label>
-                        <input type="text" name="description">
-                    </div>
-                    <div class="inform">
-                        <label for="manquable">Manquable</label>
-                        <input type="checkbox" name="manquable">
-                    </div>
-                    <div class="inform">
-                        <label for="target">Objectif</label>
-                        <input type="number" name="target">
+                        <label for="messge">Message</label>
+                        <textarea name="message"></textarea>
                     </div>
                 </div>
                 <div class="boutons">
-                    <a href="#" class="ajout"><b>Envoyer</b></a>
-                    <a href="trophes.html" class="ajout"><b>Terminer</b></a>
+                    <a href="article.html" class="ajout"><b>Envoyer</b></a>
                 </div>
             </form>
         </div>
