--- a/html/index.html
+++ b/html/index.html
@@ -5,18 +5,20 @@
         <meta charset="UTF-8">
         <link href="../css/style.css" rel="stylesheet">
         <link href="../css/index.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="">
+        <link rel="icon" type="image/png" href="../images/Design_sans_titre-removebg-preview.png">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <script src="../js/script.js"></script>
     </head>
     <body>
         <nav>
+            <img src="../images/default.png" alt="" id="btnCompte">
             <div id="mySidenav" class="sidenav">
                 <a id="closeBtn" href="#" class="close" onclick="closeNav()"><b id="closeBtnX">×</b></a>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="jeux.html">Jeux</a></li>
                     <li><a href="compte.html">Compte</a></li>
+                    <li><a href="formulaireArticle.html">Article</a></li>
                 </ul>
             </div>
             <a href="#" id="openBtn" onclick="openNav()" class="navbar">
